--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<groupId>guru.springframework</groupId>
 	<artifactId>sfg-pet-clinic</artifactId>
-	<version>0.0.2-SNAPSHOT</version>
+	<version>0.0.2</version>
 	<packaging>pom</packaging>
 	<name>sfg-pet-clinic</name>
 	<description>Demo pet clinic using sfg class</description>
@@ -40,7 +40,7 @@
 	
 	<scm>
 		<developerConnection>scm:git:https://github.com/baharford/sfg-pet-clinic.git</developerConnection>
-	  <tag>HEAD</tag>
+	  <tag>sfg-pet-clinic-0.0.2</tag>
   </scm>
 
 	<modules>
