--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.banner.image.location=lazy_bulldog.jpeg
 
 spring.messages.basename=messages/messages
+
+spring.datasource.url=jdbc:h2:mem:testdb
+
+spring.profiles.active=springdatajpa
